pkg/localenv/microservice/manifests/database/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: database
  namespace: microservices
  labels:
    app.kubernetes.io/name: database-dr
    app.kubernetes.io/component: networking
spec:
  host: database.microservices.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 25
        connectTimeout: 30s
      http:
        http1MaxPendingRequests: 10
        http2MaxRequests: 25
        maxRequestsPerConnection: 2
        maxRetries: 1
    loadBalancer:
      simple: LEAST_CONN
    outlierDetection:
      consecutiveErrors: 2
      interval: 30s
      baseEjectionTime: 60s
      maxEjectionPercent: 25
