pkg/localenv/microservice/manifests/database/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: database
  namespace: microservices
  labels:
    app.kubernetes.io/name: database-vs
    app.kubernetes.io/component: networking
spec:
  hosts:
  - database.microservices.svc.cluster.local
  http:
  - route:
    - destination:
        host: database.microservices.svc.cluster.local
        port:
          number: 8080
    timeout: 30s
    retries:
      attempts: 2
      perTryTimeout: 15s
    fault:
      delay:
        percentage:
          value: 0.05
        fixedDelay: 10s
